--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
+    "autolinker": "^3.14.3",
     "axios": "^0.21.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
