--- a/.env.sample
+++ b/.env.sample
@@ -5,4 +5,5 @@ GH_TOKEN=YOUR_KEY_GOES_HERE
 GH_URL=https://api.github.com/graphql
 MONGO_REALM_BASE_URL=YOUR_REALM_API_URL_GOES_HERE
 MONGO_REALM_APP_API_KEY=YOUR_KEY_GOES_HERE
+REAL_NAME="YOUR REAL NAME FOR RESUME GOES HERE"
 
