--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon server-local"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=16.0.0 <17.0.0",
+    "npm": ">=8.1.4"
   },
   "author": "SimpleNotSimpler",
   "license": "MIT",
