--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "nodemon server-local"
   },
   "engines": {
-    "node": ">=16.16.0 <17.0.0",
-    "npm": ">=8.15.1"
+    "node": ">=16.16.0 <=18.14.0",
+    "npm": ">=9.4.1"
   },
   "author": "SimpleNotSimpler",
   "license": "MIT",
